crates/nash-codegen/src/snapshots/nash_codegen__constant_sharing_tests__unary.snap
---
source: crates/nash-codegen/src/constant_sharing_tests.rs
expression: "format!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs)"
---
--- uplc before
[(lam builtin_1
  (case
    (con bool True)
    [[(builtin addInteger) [builtin_1 (con (list integer) [])]]
      [builtin_1 (con (list integer) [])]]
    (con integer 42)))
  (force (builtin headList))]
--- uplc after
[(lam builtin_1
  (case
    (con bool True)
    [[(builtin addInteger) [builtin_1 (con (list integer) [])]]
      [builtin_1 (con (list integer) [])]]
    (con integer 42)))
  (force (builtin headList))]
--- result
(con integer 42)
--- logs
[]
